--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,17 @@
 body {
   font: 1.2em "Verdana", sans-serif;
+  margin: auto;
 }
 
 h1 {
   color: red;
+}
+
+.t_box {
+  border: 2px solid black;
+  padding: 20px;
+  margin: 20px;
+  text-align: left;
+  font-size: 1.5em;
+  background-color: lightgray;
 }
