--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font: 1.2em "Verdana", sans-serif;
-  margin: auto;
+  margin: 5%, auto;
 }
 
 h1 {
@@ -13,5 +13,5 @@ h1 {
   margin: 20px;
   text-align: left;
   font-size: 1.5em;
-  background-color: lightgray;
+  background-color: rgb(171, 184, 184);
 }
