--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ h1 {
 }
 
 .t_box {
-  border: 2px solid black;
+  border: 2px solid rgb(171, 184, 184);
   padding: 20px;
-  margin: 20px;
+  margin: 0px;
   text-align: left;
   font-size: 1.5em;
   background-color: rgb(171, 184, 184);
