--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,10 @@ h1 {
 }
 
 .t_box {
+  border: 5px, solid, rgb(171, 184, 184);
+  margin: 20px;
   padding: 20px;
   text-align: left;
   font-size: 1.5em;
-  background-color: rgb(171, 184, 184);
+  background-color: rgb(171, 184, 184); 
 }
