--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font: 1.2em "Verdana", sans-serif;
-  margin: -1px;
+  margin: 0px
 }
 
 h1 {
@@ -10,6 +10,7 @@ h1 {
 .t_box {
   border: 5px, solid, rgb(180, 180, 180);
   padding: 20px;
+  padding-left: 50px;
   text-align: left;
   font-size: 1.5em;
   background-color: rgb(180, 180, 180);
