--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,26 @@ h1 {
   color: red;
 }
 
-.t_box {
-  border: 5px, solid, rgb(180, 180, 180);
-  padding: 20px;
-  padding-left: 50px;
-  text-align: left;
-  font-size: 1.5em;
-  background-color: rgb(180, 180, 180);
-  margin: -5px; 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+}
+
+ul li {
+  float: left;
+}
+
+ul li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  background-color: #111111;
 }
