--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  padding-left: 20px;
   overflow: hidden;
   background-color: #333333;
 }
