--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ h1 {
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
   padding-left: 20px;
+  padding-right: 0px;
   overflow: hidden;
   background-color: #333333;
 }
