--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,14 @@ ul li a {
   text-decoration: none;
 }
 
+ul li b {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
 ul li a:hover {
   background-color: #111111;
 }
