--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,15 @@ ul li b {
   text-decoration: none;
 }
 
+ul li c {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  background-color: aqua;
+}
+
 ul li a:hover {
   background-color: #111111;
 }
