--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ h1 {
   color: red;
 }
 
+p {
+  padding-left: 5px;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -52,6 +56,5 @@ ul li a:hover {
   text-align: center;
   color: #333333;
   padding: 5%;
-  margin: auto;
-  width: 66%;
+  width: 70%;
 }
