--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,24 @@
 body {
   font: 1.2em "Verdana", sans-serif;
+  margin: 0
 }
 
 h1 {
   color: red;
 }
 
-ul {
+.navbar ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  padding: 0 auto;
   overflow: hidden;
   background-color: #333333;
 }
 
-ul li {
+.navbar ul li {
   float: left;
 }
 
-ul li a {
+.navbar ul li a {
   display: block;
   color: white;
   text-align: center;
@@ -26,7 +26,7 @@ ul li a {
   text-decoration: none;
 }
 
-ul li b {
+.navbar ul li b {
   display: block;
   color: white;
   text-align: center;
@@ -34,7 +34,7 @@ ul li b {
   text-decoration: none;
 }
 
-ul li c {
+.navbar ul li c {
   display: block;
   color: white;
   text-align: center;
@@ -43,7 +43,7 @@ ul li c {
   background-color: aqua;
 }
 
-ul li a:hover {
+.navbar ul li a:hover {
   background-color: #111111;
 }
 
