--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,21 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+    }
+
 body {
   font: 1.2em "Verdana", sans-serif;
-  margin: 0
+  margin: 0px
 }
 
 h1 {
   color: red;
+  margin: 10px;
 }
 
 .navbar ul {
