--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@
 
 body {
   font: 1.2em "Verdana", sans-serif;
-  margin: 0px
+  margin: 0px;
+  background-color: #565656;
 }
 
 h1 {
@@ -51,20 +52,27 @@ h1 {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  background-color: aqua;
+  background-color: rgb(80, 135, 6);
 }
 
 .navbar ul li a:hover {
   background-color: #111111;
 }
 
-.contact_box {
-  background-color: red;
+.default_box {
+  background-color: #333333;
   text-align: center;
   color: #333333;
   width: 90%;
   height: 200px;
   margin: 20px auto;
+  border-radius: 40px;
+  padding: 2%;
+  color: white;
+}
+
+.default_box a {
+  color: white;
 }
 
 .main_text{
