--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h1 {
   list-style-type: none;
   padding: 0 auto;
   overflow: hidden;
-  background-color: #333333;
+  background-color: #333333; 
 }
 
 .navbar ul li {
@@ -59,22 +59,47 @@ h1 {
   background-color: #111111;
 }
 
-.default_box {
+.contact_box {
   background-color: #333333;
   text-align: center;
   color: #333333;
-  width: 90%;
+  width: 80%;
   height: 200px;
   margin: 20px auto;
   border-radius: 40px;
   padding: 2%;
   color: white;
+  min-width: 650px;
 }
 
-.default_box a {
+.project_box {
+  background-color: #333333;
+  text-align: left;
+  color: #333333;
+  width: 80%;
+  height: 400px;
+  margin: 20px auto;
+  border-radius: 40px;
+  padding: 2%;
   color: white;
+  min-width: 650px;
 }
+ .project_box .text {
+  padding: 1%;
+  text-align: left;
+  color: white;
+  position: relative;
+  top: -415px;
+  left: 400px;
+  
+ }
 
 .main_text{
   margin: 10px;
+}
+
+img {
+  width: auto;
+  height: 400px;
+  border-radius: 50px;
 }
