--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,9 @@ h1 {
 .navbar ul {
   list-style-type: none;
   padding: 0 auto;
-  overflow: hidden;
   background-color: #333333; 
+  min-width: 670px;
+  overflow: hidden;
 }
 
 .navbar ul li {
@@ -85,14 +86,13 @@ h1 {
   min-width: 650px;
   display:flex;
 }
- .project_box div {
+
+.project_box div {
   padding: 1%;
   text-align: left;
   color: white;
   text-wrap: balance;
  }
-
- .project
 
 .main_text{
   margin: 10px;
