--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ h1 {
   display:grid;
   grid-template-columns: auto auto;
   column-gap: 10px;
+  text-decoration: none;
 }
 
 .project_box .text {
@@ -95,7 +96,7 @@ h1 {
   color: white;
  }
 
-.project_box .button{
+.project_box a .button{
   padding: 20px;
   text-align: center;
   color: white;
@@ -106,8 +107,12 @@ h1 {
   border-radius: 10px;
  }
 
- .project_box .button:hover {
+ .project_box a .button:hover {
   background-color: #111111;
+}
+
+.project_box a {
+  text-decoration: none;
 }
 
 .main_text{
