--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ body {
 }
 
 h1 {
-  color: red;
-  margin: 10px;
+  font-size: larger;
+  margin: 10px auto;
+  text-align: center;
 }
 
 .navbar ul {
@@ -88,7 +89,6 @@ h1 {
   display:grid;
   grid-template-columns: auto auto;
   column-gap: 10px;
-  text-decoration: none;
 }
 
 .project_box .text {
@@ -118,10 +118,31 @@ h1 {
 
 .main_text{
   margin: 10px;
+  background-color: #333333;
+  text-align: left;
+  color: #333333;
+  width: 80%;
+  height: 400px;
+  margin: 20px auto;
+  border-radius: 40px;
+  padding: 20px;
+  color: white;
+  min-width: 650px;
 }
 
 img {
   width: auto;
   height: 400px;
   border-radius: 25px;
+}
+
+.about_box {
+background-color: #333333;
+text-align: left;
+color: #333333;
+width: 80%;
+height: 400px;
+margin: 20px auto;
+border-radius: 40px;
+padding: 20px;
 }
