--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ h1 {
   font-size: larger;
   margin: 10px auto;
   text-align: center;
+  min-width: 650px;
 }
 
 .navbar ul {
@@ -139,7 +140,7 @@ img {
 .about_box {
 background-color: #333333;
 text-align: left;
-color: #333333;
+color: white;
 width: 80%;
 height: 400px;
 margin: 20px auto;
