--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     border: 0;
     outline: 0;
-    font-size: 100%;
+    font-size: 1em;
     vertical-align: baseline;
     background: transparent;
     }
@@ -16,8 +16,8 @@ body {
 }
 
 h1 {
-  font-size: larger;
-  margin: 10px auto;
+  font-size: 1.75em;
+  margin: 3% auto;
   text-align: center;
   min-width: 650px;
 }
@@ -102,7 +102,7 @@ h1 {
   padding: 20px;
   text-align: center;
   color: white;
-  text-wrap: balance;
+  text-wrap: pretty;
   background-color: rgb(80, 135, 6);
   position: relative;
   top: -70px;
@@ -131,19 +131,20 @@ h1 {
   min-width: 650px;
 }
 
-img {
+.project_box img{
   width: auto;
   height: 400px;
   border-radius: 25px;
 }
 
 .about_box {
-background-color: #333333;
-text-align: left;
-color: white;
-width: 80%;
-height: 400px;
-margin: 20px auto;
-border-radius: 40px;
-padding: 20px;
+  background-color: #333333;
+  text-align: left;
+  color: white;
+  width: 80%;
+  height: auto;
+  margin: 20px auto;
+  border-radius: 40px;
+  padding: 30px;
+  min-width: 650px;
 }
