--- a/styles.css
+++ b/styles.css
@@ -148,3 +148,11 @@ h1 {
   padding: 30px;
   min-width: 650px;
 }
+
+.about_box img {
+  width: auto;
+  height: 200px;
+  border-radius: 0px;
+  margin: 0px;
+  float: right;
+  }
