felxbox on about

--- a/styles.css
+++ b/styles.css
@@ -149,10 +149,18 @@ h1 {
   min-width: 650px;
 }
 
-.about_box img {
+.about_box .about_images {
   width: auto;
   height: 200px;
   border-radius: 0px;
   margin: 0px;
   float: right;
+  display:flexbox;
   }
+
+.about_box img{
+  width: auto;
+  height: 150px;
+  border-radius: 25px;
+  margin: 10px;
+} 
