--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ h1 {
 
 .about_box {
   background-color: #333333;
-  text-align: left;
+  text-align: justify;
   color: white;
   width: 80%;
   height: auto;
@@ -152,5 +152,5 @@ h1 {
 .about_box img {
   width: auto;
   height: 300px;
-  margin: 10px;
+  margin: 20px 20px 20px 20px;
   float: right;}
