--- a/styles.css
+++ b/styles.css
@@ -147,10 +147,19 @@ h1 {
   border-radius: 40px;
   padding: 30px;
   min-width: 650px;
+  min-height: 540px;
 }
 
-.about_box img {
+.about_box .logos img {
   width: auto;
-  height: 350px;
+  height: 500px;
   margin: 20px 20px 20px 20px;
-  float: right;}
+  float: right;
+}
+
+.about_box .vex img {
+  width: auto;
+  height: 200px;
+  margin: 20px 20px 20px 20px;
+  float: left;
+}
