--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,14 @@ h1 {
 
 .about_box .vex img {
   width: auto;
-  height: 200px;
-  margin: 20px 20px 20px 20px;
+  height: 125px;
+  margin: 10px;
   float: left;
+  position: relative;
+  top: 10px;
+}
+
+.about_box a {
+  color: rgb(80, 135, 6);
+  text-decoration: none;
 }
