--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,16 @@ h1 {
   text-decoration: none;
 }
 
+.navbar ul li b img {
+  height: 40px;
+  width: auto;
+  margin: -11px 0px -11px 0px;
+  position: relative;
+  top: -3px;
+  padding: 0px;
+  vertical-align: middle;
+}
+
 .navbar ul li c {
   display: block;
   color: white;
@@ -170,4 +180,32 @@ h1 {
 .about_box a {
   color: rgb(80, 135, 6);
   text-decoration: none;
+}
+
+.home_box {
+  background-color: #333333;
+  text-align: justify;
+  color: white;
+  width: 80%;
+  height: auto;
+  margin: 20px auto;
+  border-radius: 40px;
+  padding: 30px;
+  min-width: 650px;
+  min-height: 300px;
+}
+
+.home_images {
+  display: flex;
+  margin: auto;
+  width: 90%;
+  height: auto;
+  padding: 20px;
+}
+
+.home_images img {
+  width: auto;
+  height: 400px;
+  margin: auto;
+  border-radius: 25px;
 }
