--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ h1 {
 
 .home_box {
   background-color: #333333;
-  text-align: justify;
+  text-align: center;
   color: white;
   width: 80%;
   height: auto;
@@ -192,20 +192,20 @@ h1 {
   border-radius: 40px;
   padding: 30px;
   min-width: 650px;
-  min-height: 300px;
 }
 
 .home_images {
   display: flex;
-  margin: auto;
-  width: 90%;
+  margin: 10px auto;
+  width: 70%;
   height: auto;
   padding: 20px;
+  float: center;
 }
 
 .home_images img {
-  width: auto;
-  height: 400px;
-  margin: auto;
+  width: 40%;
+  height: auto;
+  margin: 10px auto;
   border-radius: 25px;
 }
