--- a/styles.css
+++ b/styles.css
@@ -109,14 +109,13 @@ h1 {
  }
 
 h2 {
-  margin: 0px 0px 10px 0px;
+  margin: -5px 0px 5px 0px;
  }
 
 .project_box a .button{
   padding: 20px;
   text-align: center;
   color: white;
-  text-wrap: pretty;
   background-color: rgb(80, 135, 6);
   position: relative;
   top: -70px;
@@ -131,24 +130,11 @@ h2 {
   text-decoration: none;
 }
 
-.main_text{
-  margin: 10px;
-  background-color: #333333;
-  text-align: left;
-  color: #333333;
-  width: 80%;
-  height: 400px;
-  margin: 20px auto;
-  border-radius: 40px;
-  padding: 20px;
-  color: white;
-  min-width: 650px;
-}
-
 .project_box img{
   width: auto;
   height: 400px;
   border-radius: 25px;
+  margin: 0px;
 }
 
 .about_box {
@@ -229,4 +215,16 @@ h2 {
 .home_images .img2 {
   flex: 1;
   margin: 10px;
+}
+
+.vex_box {
+  background-color: #333333;
+  text-align: justify;
+  color: white;
+  width: 80%;
+  height: auto;
+  margin: 20px auto;
+  border-radius: 40px;
+  padding: 30px;
+  min-width: 630px;
 }
